# f5_evaluation_tool_server

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-feature-request.yml  3-question.yml  4-documentation.yml
.github/scripts/: deploy.sh
.github/workflows/: build-and-deploy-plesk.yml  build-and-deploy-render.yml  main.yml
category_app/: models.py  urls.py  views.py
category_app/migrations/: 0001_initial.py
competence_app/: apps.py  models.py  serializer.py  urls.py  views.py
competence_app/migrations/: 0001_initial.py
competence_overview_app/: apps.py  models.py  serializer.py  urls.py  views.py
competence_overview_app/migrations/: 0001_initial.py
evaluation_tool/: asgi.py  settings.py  urls.py  wsgi.py
level_app/: models.py  urls.py  views.py
level_app/migrations/: 0001_initial.py
technology_app/: apps.py  models.py  serializer.py  urls.py  views.py
technology_app/migrations/: 0001_initial.py
